# Coloring-Book-Studio

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  coloring-book-studio.html  coloring-book-workflow.html  docker-compose.yml  index.html  nixpacks.toml  railway.toml  requirements.txt  run.sh
app/: database.py  main.py  models.py
backend/: .env.example  pyproject.toml
backend/app/: database.py  main.py  models.py
backend/app/routers/: assets.py  books.py  documents.py  export.py  generate.py  inspiration.py  jobs.py  pages.py  settings.py
backend/app/services/: canva.py  image_gen.py  image_proc.py  pdf_export.py  pdf_ocr.py  print_spec.py  prompt_builder.py  providers.py  storage.py  svg_text.py  text_gen.py  text_providers.py  vectorize.py  vectors.py  versioning.py
backend/app/static/: index.html
backend/tests/: conftest.py  test_api.py  test_export_api.py  test_generation_dimensions.py  test_generation_prompt.py  test_image_gen_reference.py  test_image_proc.py  test_inspiration_api.py  test_inspiration_model.py  test_pdf_export.py  test_print_spec.py  test_prompt_builder.py  test_reference_image.py  test_reorder_api.py  test_schema_migrations.py  test_settings_migration.py  test_settings_providers.py  test_storage_delete.py  test_storage_sync.py  test_svg_text.py  test_text_endpoints.py  test_text_gen.py  test_text_providers.py  test_text_settings.py  test_vectorize.py  test_versioning_helper.py  test_versions_api.py
docs/: design-system.md  tech-stack.md
frontend/: figma.config.json  package.json  playwright.config.ts  pnpm-lock.yaml  (+4 more)
(+62 files in other folders)
