[project]
name = "coloring-book-studio-backend"
version = "0.1.0"
description = "Coloring Book Studio — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "aiosqlite==0.20.0",
    "greenlet>=3.1.1",
    "python-multipart==0.0.12",
    "python-dotenv==1.0.1",
    "replicate==0.34.1",
    "httpx==0.28.0",
    "Pillow==11.0.0",
    "reportlab==4.2.5",
    "aiofiles==24.1.0",
    "vtracer>=0.6.15",
    "pymupdf>=1.27.2.3",
    "asyncpg>=0.31.0",
    "pgvector>=0.4.2",
    "boto3>=1.35",
    "mistralai>=1.5.2",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "ruff==0.8.4",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
